Added semantic tags in categories templates.

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,7 @@
 <h3>Create New Category</h3>
 
+<section class="body-text">
 <%= render 'form', category: @category %>
 
 <%= link_to 'Back', categories_path %>
+</section>
