--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 <h3><%= @category.name %></h3>
 
+<section class="body-text">
 <%= render partial: '/application/products_index' %>
 
 <%= link_to 'Back', categories_path %>
+</section>
