--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Categories</h1>
 
+<section class="body-text">
 <ul>
   <% @categories.each do |item| %>
   <li><%= link_to (item.name),  category_path(item) %></li>
@@ -9,3 +10,4 @@
 </ul>
 
 <%#render partial: '/application/index', locals: {collection: @categories, field:'name'}%>
+</section>
