--- a/app/views/order_items/index.html.erb
+++ b/app/views/order_items/index.html.erb
@@ -1,29 +1,28 @@
 <h1>Your Order</h1>
 <main>
+  <section class="body-text">
+    <section>
+      <ul>
+        <% @order_items.each do |item| %>
 
-  <section>
-
-
-    <ul>
-      <% @order_items.each do |item| %>
-
-      <li> <%= item.product.name %></li>
-      <li>
-        <%= form_for(item) do |f| %>
-        <%= f.label :quantity %>
-        <%= f.number_field :quantity,
-        in: 1.0..item.product.quantity,
-        step: 1.0 %>
-        <%= f.submit "Update" %>
+        <li> <%= item.product.name %></li>
+        <li>
+          <%= form_for(item) do |f| %>
+          <%= f.label :quantity %>
+          <%= f.number_field :quantity,
+          in: 1.0..item.product.quantity,
+          step: 1.0 %>
+          <%= f.submit "Update" %>
+          <% end %>
+        </li>
+        <li> Price: <%= item.product.price %></li>
+        <li class= "link"><%= link_to 'Remove from Cart', order_item_path(item), method: :delete %></li>
         <% end %>
-      </li>
-      <li> Price: <%= item.product.price %></li>
-      <li class= "link"><%= link_to 'Remove from Cart', order_item_path(item), method: :delete %></li>
-      <% end %>
-    </ul>
-  </section>
-  <section>
-    <%= link_to 'Cancel Order', order_path(@order), method: :delete %>
-    <%= link_to 'Purchase Cart', new_order_payment_detail_path(@order) %>
+      </ul>
+    </section>
+    <section>
+      <%= link_to 'Cancel Order', order_path(@order), method: :delete %>
+      <%= link_to 'Purchase Cart', new_order_payment_detail_path(@order) %>
+    </section>
   </section>
 </main>
