--- a/app/views/order_items/index.html.erb
+++ b/app/views/order_items/index.html.erb
@@ -23,6 +23,7 @@
     <section>
       <%= link_to 'Cancel Order', order_path(@order), method: :delete %>
       <%= link_to 'Purchase Cart', new_order_payment_detail_path(@order) %>
+      <%= link_to 'Keep Shopping', products_path %>
     </section>
   </section>
 </main>
