Added semantic HTML for orders/index and application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,3 +96,11 @@ h2 {
 .body-text a {
   color: #8895c2;
 }
+
+.body-text a:hover {
+  color: rgba(255, 0, 0, 0.66);
+}
+
+.button {
+  background-color: #8895c2;
+}
