--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,8 +74,9 @@
         </div>
 
       </nav>
+    </header>
 
-      <%= yield %>
+    <%= yield %>
 
-    </body>
-    </html>
+  </body>
+  </html>
