--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,8 @@
 
       </nav>
 
-      <%= yield %>
-
+      <div class="container">
+        <%= yield %>
+      </div>
     </body>
     </html>
