Styling to Categories and Merchants index views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,7 +71,7 @@ li.column {
   list-style: none;
 }
 
-.small-up-4 > li {
+.small-up-4 > li, .small-up-3 > li {
   margin-bottom: 2.25rem;
   margin-top: 2rem;
 }
@@ -81,6 +81,11 @@ h2 {
   color: rgb(136, 149, 194);
   text-shadow: 2px 2px 3px rgb(82, 82, 142);
   font-family: 'Chelsea Market', cursive;
+}
+
+h3 {
+  font-family: 'Chelsea Market', cursive;
+  margin-top: 2rem;
 }
 
 .product-info {
