--- a/app/views/application/_index.html.erb
+++ b/app/views/application/_index.html.erb
@@ -1,5 +1,5 @@
-<ul>
+<ul class='row small-up-3'>
   <% collection.each do |item| %>
-   <li><%= link_to (item[field]), polymorphic_url(item) %></li>
+   <li class='column'><h2><%= link_to (item[field]), polymorphic_url(item) %></h2></li>
   <% end %>
 </ul>
