--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Categories</h1>
+<h3>Categories</h3>
 
 <section class="body-text">
-<ul>
+<ul class='row small-up-4'>
   <% @categories.each do |item| %>
-  <li><%= link_to (item.name),  category_path(item) %></li>
+  <li class='column'><h2><%= link_to (item.name),  category_path(item) %></h2></li>
   <% end %>
 </ul>
 
