:q Change categories layouts :wq
save

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,5 +4,5 @@
 <section class="body-text">
 <%= render partial: '/application/products_index' %>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back', categories_path, class: "button", id: "white-link" %>
 </section>
