Fixes button that I messed up

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -36,8 +36,7 @@ h4, h3 {
 }
 
 .button:hover {
-  background-color: rgba(245,242,225, 0.3);
-  color: rgb(82, 82, 142);
+  background-color: #5877B3;
 }
 
 .all-reviews, label {
