--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+main{
+  color: #52528e;
+}
+
+.totals {
+  font-weight: bold;
+  border-bottom: 2px solid;
+  border-radius: .1rem;
+}
+
+.row li {
+  list-style: none;
+}
