--- a/app/views/order_items/index.html.erb
+++ b/app/views/order_items/index.html.erb
@@ -1,29 +1,33 @@
-<h1>Your Order</h1>
 <main>
-  <section class="body-text">
-    <section>
-      <ul>
-        <% @order_items.each do |item| %>
 
-        <li> <%= item.product.name %></li>
-        <li>
-          <%= form_for(item) do |f| %>
-          <%= f.label :quantity %>
-          <%= f.number_field :quantity,
-          in: 1.0..item.product.quantity,
-          step: 1.0 %>
-          <%= f.submit "Update" %>
+  <article class="row all-items">
+    <section class="items-output columns small-6">
+      <h1>Your Orders</h1>
+      <ul class="row small-up-1">
+        <aside class="item-input columns small-6">
+          <% @order_items.each do |item| %>
+          <li> <%= item.product.name %></li>
+          <li>
+            <%= form_for(item) do |f| %>
+            <%= f.label :quantity %>
+            <%= f.number_field :quantity,
+            in: 1.0..item.product.quantity,
+            step: 1.0 %>
+            <%= f.submit "Update" %>
+            <% end %>
+          </li>
+          <li> Price: <%= item.product.price %></li>
+          <li class= "link"><%= link_to 'Remove from Cart', order_item_path(item), method: :delete %></li><br>
           <% end %>
-        </li>
-        <li> Price: <%= item.product.price %></li>
-        <li class= "link"><%= link_to 'Remove from Cart', order_item_path(item), method: :delete %></li>
-        <% end %>
+        </aside>
       </ul>
     </section>
-    <section>
-      <%= link_to 'Cancel Order', order_path(@order), method: :delete %>
-      <%= link_to 'Purchase Cart', new_order_payment_detail_path(@order) %>
-      <%= link_to 'Keep Shopping', products_path %>
-    </section>
+  </article>
+
+  <section>
+    <%= link_to 'Cancel Order', order_path(@order), method: :delete %>
+    <%= link_to 'Purchase Cart', new_order_payment_detail_path(@order) %>
+    <%= link_to 'Keep Shopping', products_path %>
   </section>
+</section>
 </main>
