--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,7 +8,6 @@
         <% if @product.description != nil %>
         <li class="product-info column text-center"><%= @product.description %></li>
         <%end %>
-
         <li class="product-info column text-center"> $ <%= @product.price %>0</li>
         <li class="product-info notice column text-center">Only <%= @product.quantity %> left!</li>
         <li class="product-info notice column text-center"><%= link_to 'Add to Cart', orders_path, method: :post %></li>
@@ -17,8 +16,7 @@
   </ul>
 </section>
 
-
-<article class="row all-reviews">
+<article class="row all-orders">
   <section class="reviews-output columns small-6">
 
     <h4>Customer Reviews</h4>
@@ -60,6 +58,6 @@
     <% else %>
     <h5>You can't review your own product.</h5>
     <% end %>
-  </aside>
+
 
 </article>
