Finishes order fufilment page

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -15,3 +15,12 @@ main{
 .row li {
   list-style: none;
 }
+
+.small-8 {
+  padding-right: 20rem;
+}
+
+ul.row {
+  border-bottom: 2px solid;
+  border-bottom-right-radius: .5rem;
+}
