Finishes order fufilment page

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -20,7 +20,7 @@ main{
   padding-right: 20rem;
 }
 
-ul.row {
+ul.purchases-list {
   border-bottom: 2px solid;
   border-bottom-right-radius: .5rem;
 }
