Last-minute css fixes

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -20,7 +20,13 @@
   padding-right: 5rem;
 }
 
-h4, h3 {
+.reviews-input, .reviews-output {
+  color: rgb(136, 149, 194);
+  font-family: 'Rubik', sans-serif;
+}
+
+.reviews-input > h4, .fix-me {
+  font-family: 'Rubik', sans-serif;
   font-size: 2rem;
 }
 
@@ -41,4 +47,8 @@ h4, h3 {
 
 .all-reviews, label {
   color: rgb(136, 149, 194);
+}
+
+.link, a {
+  color: rgb(82, 82, 142);
 }
