--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 <!-- <h1>Products by <%# @merchant.user_name %></h1> -->
-
+<section class="body-text">
 <%= render partial: 'products_index' %>
+</section>
