--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
 <article class="row all-orders">
   <section class="reviews-output columns small-6">
 
-    <h4>Customer Reviews</h4>
+    <h4 class="fix-me">Customer Reviews</h4>
     <ul class="row small-up-1">
     <%  @reviews.each do |f| %>
       <li class="column">
@@ -44,7 +44,7 @@
 
   <aside class="reviews-input columns small-6">
     <% if @product.merchant_id == nil || @product.merchant_id != session[:merchant_id] %>
-    <h3>Add a Review</h3>
+    <h3 class="fix-me">Add a Review</h3>
       <%= form_for [@product, @review] do |f| %>
         <%= f.label :rating %>
         <%= f.number_field :rating,  in: 1..5 %>
