--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,22 +1,24 @@
-<%= form_for(category) do |f| %>
+<section class="body-text">
+  <%= form_for(category) do |f| %>
   <% if category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
+  <div id="error_explanation">
+    <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
 
-      <ul>
+    <ul>
       <% category.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <li><%= message %></li>
       <% end %>
-      </ul>
-    </div>
+    </ul>
+  </div>
   <% end %>
 
-    <section>
-      <%= form_for @category do |f| %>
-      <%= f.label :"Category Name"%><br>
-       <%= f.text_field :name, class: "form-control" %><br>
-       <% end %>
-       <%= f.submit %>
-    </section>
+  <section>
+    <%= form_for @category do |f| %>
+    <%= f.label :"Category Name"%><br>
+    <%= f.text_field :name, class: "form-control" %><br>
+    <% end %>
+    <%= f.submit %>
+  </section>
 
-<% end %>
+  <% end %>
+</section>
